Added polling logic for listening on "new games" where the user is challenged. The popup is rendered. Also, the correct turn is calculated

--- a/clients/src/main/resources/static/css/main.css
+++ b/clients/src/main/resources/static/css/main.css
@@ -1,4 +1,20 @@
-label.center {
+label.center, div.center {
     width: 100%;
     text-align: center;
+}
+
+img.logo {
+    width: 40px;
+    padding: 5px;
+    float: left;
+}
+
+#chessBoard {
+    display: table-cell;
+    width: 400px;
+    margin:auto
+}
+
+body {
+    background-image: url('../img/background.png');
 }
